--- a/1.4: JSON - Working with Data and APIs in JavaScript/index.html
+++ b/1.4: JSON - Working with Data and APIs in JavaScript/index.html
@@ -17,11 +17,15 @@
 <h1>Where is the ISS?</h1>
 
 <div id="issMap"></div>
-<ul>
-  <li>Latitude: <span id="lat"></span></li>
-  <li>Longitude: <span id="long"></span></li>
-  <li>Velocity: <span id="vel"></span> Km/h</li>
-</ul>
+<div class="vals">
+  <ul>
+    <li>Latitude: <span id="lat"></span></li>
+    <li>Longitude: <span id="long"></span></li>
+    <li>Velocity: <span id="vel"></span> Km/h</li>
+    <li>Altitude: <span id="alt"></span> Meters</li>
+  </ul>
+</div>
+
 
 
 <body>
